# ReversedPolishNotation

./: CMakeLists.txt  CTree.cpp  CTree.h  main.cpp
CNodes/: CNode.cpp  CNode.h  CNodeOperator.cpp  CNodeOperator.h  CNodeValue.cpp  CNodeValue.h
